--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/graphql": "^14.0.1",
     "@types/node-fetch": "^2.1.2",
     "@types/xml2js": "^0.4.3",
+    "dataloader": "^1.4.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
